# team-PJ

./: .flake8  A.xlsx  B.xlsx  CODING_STANDARDS.md  RPA_Requirements_Template.md  create_sample_assets.py  create_sample_data.py  generate_contracts.py  main.py  progress_tracker.py  pyproject.toml  selenium_demo.py  utils.py  verify_deps.py
data/: contract_data.xlsx
output/: Contract_グランドハイツ東京.docx  Contract_サニーサイド横浜.docx  Contract_リバーサイド大阪.docx
templates/: contract_template.docx
tests/: test_sample.py
