[project]
name = "team-pj"
version = "0.1.0"
description = "Add your description here"

requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ruff>=0.14.7",
    "black>=24.0.0",
    "python-docx>=1.1.0",
    "selenium>=4.27.0",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]

# Black フォーマッター設定
[tool.black]
# 行長を79文字に制限（PEP 8準拠）
line-length = 79

# 対象Pythonバージョン
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

# フォーマット対象ファイルのパターン
include = '\.pyi?$'

# 除外するディレクトリ・ファイル
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
)/
'''

# Flake8 リンター設定
[tool.flake8]
# 行長を79文字に制限（PEP 8準拠、Blackと同じ設定）
max-line-length = 79

# 除外するディレクトリ
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    "build",
    "dist",
]

# 無視するエラーコード（必要に応じて調整）
# E203: Black との互換性のため（スライスのスペース）
# W503: Black との互換性のため（演算子の前での改行）
ignore = ["E203", "W503"]

# 1ファイルあたりの最大複雑度（循環的複雑度）
max-complexity = 10
